--- a/collector.html
+++ b/collector.html
@@ -137,7 +137,7 @@
 
 					<div class="row">
 						<div class="col s3 push-s9 right-align">
-							<button id="btnNextEdu" name="btnNextEdu" data-tab="courses" class="waves-effect btn-flat btn-small">Siguiente</button>
+							<button id="btnNextEdu" data-tab="courses" class="waves-effect btn-flat btn-small">Siguiente</button>
 						</div>
 					</div>
 				</article>
