Update the next buttons' name

--- a/collector.html
+++ b/collector.html
@@ -65,7 +65,7 @@
 				<br>
 				<div class="row">
 					<div class="col s2 push-s10 right-align">
-						<button id="btn-next-basic" data-tab="education" class="waves-effect waves-teal btn-flat btn-small">
+						<button id="btnNextBasic" data-tab="education" class="waves-effect waves-teal btn-flat btn-small">
 							Siguiente
 						</button>
 					</div>
@@ -182,7 +182,7 @@
 				<br>
 				<div class="row">
 					<div class="col s2 push-s10 right-align">
-						<button id="btn-next-courses" data-tab="languages" class="waves-effect waves-teal btn-flat btn-small">
+						<button id="btnNextCourses" data-tab="languages" class="waves-effect waves-teal btn-flat btn-small">
 							Siguiente
 						</button>
 					</div>
@@ -232,7 +232,7 @@
 				<br>
 				<div class="row">
 					<div class="col s2 push-s8 right-align">
-						<button id="btn-next-languages" data-tab="skills" class="waves-effect waves-teal btn-flat btn-small">
+						<button id="btnNextLanguages" data-tab="skills" class="waves-effect waves-teal btn-flat btn-small">
 							Siguiente
 						</button>
 					</div>
@@ -259,7 +259,7 @@
 				<br>
 				<div class="row">
 					<div class="col s2 push-s7 right-align">
-						<button id="btn-next-skills" data-tab="sectors" class="waves-effect waves-teal btn-flat btn-small">
+						<button id="btnNextSkills" data-tab="sectors" class="waves-effect waves-teal btn-flat btn-small">
 							Siguiente
 						</button>
 					</div>
@@ -286,7 +286,7 @@
 				<br>
 				<div class="row">
 					<div class="col s2 push-s6 right-align">
-						<button id="btn-next-sectors" data-tab="int-work-exp" class="waves-effect waves-teal btn-flat btn-small">
+						<button id="btnNextSectors" data-tab="int-work-exp" class="waves-effect waves-teal btn-flat btn-small">
 							Siguiente
 						</button>
 					</div>
@@ -357,7 +357,7 @@
 				<br>
 				<div class="row">
 					<div class="col s2 push-s10 right-align">
-						<button id="btn-next-iwe" data-tab="ext-work-exp" class="waves-effect waves-teal btn-flat btn-small">
+						<button id="btnNextIwe" data-tab="ext-work-exp" class="waves-effect waves-teal btn-flat btn-small">
 							Siguiente
 						</button>
 					</div>
