Add new links for direction arrows in edu table

--- a/collector.html
+++ b/collector.html
@@ -128,6 +128,8 @@
 								<td>2015-2020</td>
 								<td>Licenciatura en Inform&aacute;tica Administrativa</td>
 								<td>Universidad Nacional Aut&oacute;noma de M&eacute;xico</td>
+								<td><a href="#">&bigtriangleup;</a></td>
+								<td><a href="#">&bigtriangledown;</a></td>
 								<td><a href="#" onclick="educationHandler.selectEducation(event, 0)">Editar</a></td>
 								<td><a href="#" onclick="educationHandler.removeEducation(event, 0)">Eliminar</a></td>
 							</tr>
