Add row ccs style to 'title' and 'tabs' sections of collector file

--- a/collector.html
+++ b/collector.html
@@ -11,15 +11,15 @@
 		<div class="row">
 
 			<!-- title -->
-			<div class="col s12">
+			<div class="row">
 				<br>
 				<h5>Datos del Candidato</h5>
-				<br><br><br>
+				<br><br>
 			</div>
 			
 			<!-- tabs -->
-			<div id="wrap-tabs" class="col s12">
-				<ul id="tabs" class="tabs tabs-fixed-width">
+			<div id="wrap-tabs" class="row">
+				<ul id="tabs" class="tabs">
 					<li class="tab"><a href="#basic">B&aacute;sicos</a></li>
 					<li class="tab"><a href="#education">Educaci&oacute;n</a></li>
 					<li class="tab"><a href="#courses">Cursos</a></li>
@@ -29,7 +29,7 @@
 					<li class="tab"><a href="#int-work-exp">Exp Int</a></li>
 					<li class="tab"><a href="#ext-work-exp">Exp Ext</a></li>
 				</ul>
-				<br><br><br>
+				<br><br>
 			</div>
 
 			<!-- basic -->
