--- a/collector.html
+++ b/collector.html
@@ -138,7 +138,10 @@
 					<br><br><br>
 
 					<div class="row">
-						<div class="col s3 push-s9 right-align">
+						<div class="col s3 left-align">
+							<button id="btnPrevEdu" data-tab="basic" class="waves-effect btn-flat btn-small">Anterior</button>
+						</div>
+						<div class="col s3 push-s6 right-align">
 							<button id="btnNextEdu" data-tab="courses" class="waves-effect btn-flat btn-small">Siguiente</button>
 						</div>
 					</div>
