Split column 'period' in table of edu module

--- a/collector.html
+++ b/collector.html
@@ -117,7 +117,8 @@
 					<table id="tableEdu" class="striped">
 						<thead>
 							<tr>
-								<th>Per&iacute;odo</th>
+								<th>Inicio</th>
+								<th>Fin</th>
 								<th>Grado</th>
 								<th>Instituci&oacute;n</th>
 								<th colspan="2">Opciones</th>
@@ -125,7 +126,8 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td>2015-2020</td>
+								<td>2015</td>
+								<td>2020</td>
 								<td>Licenciatura en Inform&aacute;tica Administrativa</td>
 								<td>Universidad Nacional Aut&oacute;noma de M&eacute;xico</td>
 								<td><a href="#">&bigtriangleup;</a></td>
