--- a/collector.html
+++ b/collector.html
@@ -130,10 +130,20 @@
 								<td>2020</td>
 								<td>Licenciatura en Inform&aacute;tica Administrativa</td>
 								<td>Universidad Nacional Aut&oacute;noma de M&eacute;xico</td>
-								<td><a href="#">&bigtriangleup;</a></td>
-								<td><a href="#">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="educationHandler.moveRowUp(0)">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="educationHandler.moveRowDown(0)">&bigtriangledown;</a></td>
 								<td><a href="#" onclick="educationHandler.selectEducation(event, 0)">Editar</a></td>
 								<td><a href="#" onclick="educationHandler.removeEducation(event, 0)">Eliminar</a></td>
+							</tr>
+							<tr>
+								<td>2020</td>
+								<td>2023</td>
+								<td>Maestr&iacute;a en Administraci&oacute;n</td>
+								<td>Universidad del Valle de M&eacute;xico</td>
+								<td><a href="#" onclick="educationHandler.moveRowUp(1)">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="educationHandler.moveRowDown(1)">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="educationHandler.selectEducation(event, 1)">Editar</a></td>
+								<td><a href="#" onclick="educationHandler.removeEducation(event, 1)">Eliminar</a></td>
 							</tr>
 						</tbody>
 					</table>
