Refactor removeEducation method in education script

--- a/collector.html
+++ b/collector.html
@@ -133,7 +133,7 @@
 								<td><a href="#" onclick="educationHandler.moveRowUp(event, 0)">&bigtriangleup;</a></td>
 								<td><a href="#" onclick="educationHandler.moveRowDown(event, 0)">&bigtriangledown;</a></td>
 								<td><a href="#" onclick="educationHandler.selectEducation(event, 0)">Editar</a></td>
-								<td><a href="#" onclick="educationHandler.removeEducation(event, 0)">Eliminar</a></td>
+								<td><a href="#" onclick="educationHandler.removeEducation(event)">Eliminar</a></td>
 							</tr>
 							<tr>
 								<td>Maestr&iacute;a en Administraci&oacute;n</td>
@@ -143,7 +143,7 @@
 								<td><a href="#" onclick="educationHandler.moveRowUp(event, 1)">&bigtriangleup;</a></td>
 								<td><a href="#" onclick="educationHandler.moveRowDown(event, 1)">&bigtriangledown;</a></td>
 								<td><a href="#" onclick="educationHandler.selectEducation(event, 1)">Editar</a></td>
-								<td><a href="#" onclick="educationHandler.removeEducation(event, 1)">Eliminar</a></td>
+								<td><a href="#" onclick="educationHandler.removeEducation(event)">Eliminar</a></td>
 							</tr>
 						</tbody>
 					</table>
