Refactor selectEducation method in education script

--- a/collector.html
+++ b/collector.html
@@ -132,7 +132,7 @@
 								<td>2020</td>
 								<td><a href="#" onclick="educationHandler.moveRowUp(event, 0)">&bigtriangleup;</a></td>
 								<td><a href="#" onclick="educationHandler.moveRowDown(event, 0)">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="educationHandler.selectEducation(event, 0)">Editar</a></td>
+								<td><a href="#" onclick="educationHandler.selectEducation(event)">Editar</a></td>
 								<td><a href="#" onclick="educationHandler.removeEducation(event)">Eliminar</a></td>
 							</tr>
 							<tr>
@@ -142,7 +142,7 @@
 								<td>2023</td>
 								<td><a href="#" onclick="educationHandler.moveRowUp(event, 1)">&bigtriangleup;</a></td>
 								<td><a href="#" onclick="educationHandler.moveRowDown(event, 1)">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="educationHandler.selectEducation(event, 1)">Editar</a></td>
+								<td><a href="#" onclick="educationHandler.selectEducation(event)">Editar</a></td>
 								<td><a href="#" onclick="educationHandler.removeEducation(event)">Eliminar</a></td>
 							</tr>
 						</tbody>
