--- a/collector.html
+++ b/collector.html
@@ -130,8 +130,8 @@
 								<td>Universidad Nacional Aut&oacute;noma de M&eacute;xico</td>
 								<td>2015</td>
 								<td>2020</td>
-								<td><a href="#" onclick="educationHandler.moveRowUp(event, 0)">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="educationHandler.moveRowDown(event, 0)">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="educationHandler.moveRowUp(event)">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="educationHandler.moveRowDown(event)">&bigtriangledown;</a></td>
 								<td><a href="#" onclick="educationHandler.selectEducation(event)">Editar</a></td>
 								<td><a href="#" onclick="educationHandler.removeEducation(event)">Eliminar</a></td>
 							</tr>
@@ -140,8 +140,8 @@
 								<td>Universidad del Valle de M&eacute;xico</td>
 								<td>2020</td>
 								<td>2023</td>
-								<td><a href="#" onclick="educationHandler.moveRowUp(event, 1)">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="educationHandler.moveRowDown(event, 1)">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="educationHandler.moveRowUp(event)">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="educationHandler.moveRowDown(event)">&bigtriangledown;</a></td>
 								<td><a href="#" onclick="educationHandler.selectEducation(event)">Editar</a></td>
 								<td><a href="#" onclick="educationHandler.removeEducation(event)">Eliminar</a></td>
 							</tr>
