Update label of main button in edu module

--- a/collector.html
+++ b/collector.html
@@ -106,7 +106,7 @@
 									<button id="btnAuxEdu" name="btnAuxEdu" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6">
-									<button id="btnMainEdu" name="btnMainEdu" class="waves-effect btn-flat btn-small">A&ntilde;adir</button>
+									<button id="btnMainEdu" name="btnMainEdu" class="waves-effect btn-flat btn-small">Agregar</button>
 								</div>
 							</div>
 						</div>
