Add form-util script

--- a/collector.html
+++ b/collector.html
@@ -480,6 +480,7 @@
 	<script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
 	<script type="text/javascript" src="js/helper/validator.js"></script>
+	<script type="text/javascript" src="js/helper/form-util.js"></script>
 	<script type="text/javascript" src="js/education.js"></script>
 	<script type="text/javascript" src="js/course.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
