--- a/collector.html
+++ b/collector.html
@@ -479,8 +479,11 @@
 
 	<script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
+
 	<script type="text/javascript" src="js/helper/validator.js"></script>
 	<script type="text/javascript" src="js/helper/form-util.js"></script>
+	<script type="text/javascript" src="js/helper/table-util.js"></script>
+
 	<script type="text/javascript" src="js/education.js"></script>
 	<script type="text/javascript" src="js/course.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
