Rename methods in course script

--- a/collector.html
+++ b/collector.html
@@ -212,19 +212,19 @@
 								<td>JIRA fundamentals</td>
 								<td>TCS internal courses</td>
 								<td>02/Jul/2022</td>
-								<td><a href="#" onclick="courseHandler.moveRowUp(event)">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="courseHandler.moveRowDown(event)">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="courseHandler.selectCourse(event)">Editar</a></td>
-								<td><a href="#" onclick="courseHandler.removeCourse(event)">Eliminar</a></td>
+								<td><a href="#" onclick="courseHandler.moveUp(event)">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="courseHandler.moveDown(event)">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="courseHandler.select(event)">Editar</a></td>
+								<td><a href="#" onclick="courseHandler.remove(event)">Eliminar</a></td>
 							</tr>
 							<tr>
 								<td>Persistencia de datos con Java</td>
 								<td>Platzi</td>
 								<td>Septiembre 2020</td>
-								<td><a href="#" onclick="courseHandler.moveRowUp(event)">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="courseHandler.moveRowDown(event)">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="courseHandler.selectCourse(event)">Editar</a></td>
-								<td><a href="#" onclick="courseHandler.removeCourse(event)">Eliminar</a></td>
+								<td><a href="#" onclick="courseHandler.moveUp(event)">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="courseHandler.moveDown(event)">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="courseHandler.select(event)">Editar</a></td>
+								<td><a href="#" onclick="courseHandler.remove(event)">Eliminar</a></td>
 							</tr>
 						</tbody>
 					</table>
