--- a/collector.html
+++ b/collector.html
@@ -477,8 +477,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
-	<script type="text/javascript" src="js/materialize.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery-3.7.1.min.js"></script>
+	<script type="text/javascript" src="js/lib/materialize.min.js"></script>
 
 	<script type="text/javascript" src="js/helper/validator.js"></script>
 	<script type="text/javascript" src="js/helper/form-util.js"></script>
