Rename methods in EduHandler class

--- a/collector.html
+++ b/collector.html
@@ -130,20 +130,20 @@
 								<td>Universidad Nacional Aut&oacute;noma de M&eacute;xico</td>
 								<td>2015</td>
 								<td>2020</td>
-								<td><a href="#" onclick="educationHandler.moveRowUp(event)">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="educationHandler.moveRowDown(event)">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="educationHandler.selectEducation(event)">Editar</a></td>
-								<td><a href="#" onclick="educationHandler.removeEducation(event)">Eliminar</a></td>
+								<td><a href="#" onclick="educationHandler.moveUp(event)">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="educationHandler.moveDown(event)">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="educationHandler.select(event)">Editar</a></td>
+								<td><a href="#" onclick="educationHandler.remove(event)">Eliminar</a></td>
 							</tr>
 							<tr>
 								<td>Maestr&iacute;a en Administraci&oacute;n</td>
 								<td>Universidad del Valle de M&eacute;xico</td>
 								<td>2020</td>
 								<td>2023</td>
-								<td><a href="#" onclick="educationHandler.moveRowUp(event)">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="educationHandler.moveRowDown(event)">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="educationHandler.selectEducation(event)">Editar</a></td>
-								<td><a href="#" onclick="educationHandler.removeEducation(event)">Eliminar</a></td>
+								<td><a href="#" onclick="educationHandler.moveUp(event)">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="educationHandler.moveDown(event)">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="educationHandler.select(event)">Editar</a></td>
+								<td><a href="#" onclick="educationHandler.remove(event)">Eliminar</a></td>
 							</tr>
 						</tbody>
 					</table>
