Add skill script

--- a/collector.html
+++ b/collector.html
@@ -600,6 +600,7 @@
 	<script type="text/javascript" src="js/education.js"></script>
 	<script type="text/javascript" src="js/course.js"></script>
 	<script type="text/javascript" src="js/language.js"></script>
+	<script type="text/javascript" src="js/skill.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
