Add sector script

--- a/collector.html
+++ b/collector.html
@@ -401,8 +401,8 @@
 						<legend>Sector</legend>
 						<input name="sectorIndex" type="hidden" value="">
 						<div class="input-field col s6">
-							<input id="sectorName" name="sectorName" type="text" class="validate" data-length="50" maxlength="50">
-							<label for="sectorName">Nombre</label>
+							<input id="sectorDesc" name="sectorDesc" type="text" class="validate" data-length="50" maxlength="50">
+							<label for="sectorDesc">Descripci&oacute;n</label>
 							<span class="helper-text col s10">Ej. Cadena de suministro</span>
 						</div>
 						<div class="input-field col s6">
@@ -601,6 +601,7 @@
 	<script type="text/javascript" src="js/course.js"></script>
 	<script type="text/javascript" src="js/language.js"></script>
 	<script type="text/javascript" src="js/skill.js"></script>
+	<script type="text/javascript" src="js/sector.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
